# edifice

./: .cvsignore  ChangeLog  Makefile.am  README  acinclude.m4  autogen.sh  configure.in
src/: .cvsignore  Makefile.am  edifice.cpp  edifice.h
tools/: .cvsignore  Makefile.am  main.cpp
