dnl Initialise autoconf

AC_INIT()
AM_CONFIG_HEADER(config.h)

dnl Detect the canonical host and target environment

AC_CANONICAL_HOST
AC_CANONICAL_TARGET

dnl Initialise automake

AM_INIT_AUTOMAKE("edifice", "0.0.0")

dnl Test for GNU libtool

AM_DISABLE_STATIC
AM_PROG_LIBTOOL

dnl Test for C++ compiler

AC_PROG_CXX

AC_ARG_ENABLE(debug,
    [  --enable-debug          enable debug information [default=no]],
    [
        if test "$enableval" = "yes"; then
            CXXFLAGS="$CXXFLAGS -Wall -DDEBUG"
        else
            CXXFLAGS="$CXXFLAGS -Wall -DNDEBUG"
        fi
    ],[
        CXXFLAGS="$CXXFLAGS -Wall -DNDEBUG"
    ]
)

LIBS="$LIBS -L/usr/X11R6/lib"

AC_LANG_CPLUSPLUS
AC_REQUIRE_CPP

SDL_VERSION=1.2.0
WF_CHECK_SDL_IMAGE($SDL_VERSION)
dnl add flags later so we don't cause issues with SDL_main

AC_LANG_PUSH(C)

AC_CHECK_LIB(GL,OSMesaCreateContext, ,
    [
        AC_CHECK_LIB(opengl32,OSMesaCreateContext, ,
            [
                AC_CHECK_LIB(OSMesa,OSMesaCreateContext, ,
                    [
                        AC_MSG_ERROR(Unable to find OSMesa in libGL or libOSMesa. Please make sure Mesa is available.)
                    ])
            ])
    ])

AC_LANG_POP(C)

AC_CHECK_LIB(GLU,gluPerspective, [ LIBS="$LIBS -lGLU" ],
    AC_CHECK_LIB(glu32,gluPerspective, [ LIBS="$LIBS -lglu32" ],
        AC_MSG_ERROR(Could not find OpenGL U library)
    )
)

AC_CHECK_LIB(Xi, XSelectExtensionEvent)
AC_CHECK_LIB(Xmu, XmuLookupStandardColormap)
AC_CHECK_LIB(glut,glutInit, [ LIBS="$LIBS -lglut" ],
    AC_MSG_ERROR(Could not find glut library)
)

CXXFLAGS="$CXXFLAGS $WF_SDL_IMAGE_CFLAGS"
LIBS="$LIBS $WF_SDL_IMAGE_LIBS"

dnl Generate files

AC_OUTPUT([
	Makefile
	src/Makefile
	tools/Makefile
])
